--- a/utils/stemdlConfig_GPU_6.yaml
+++ b/utils/stemdlConfig_GPU_6.yaml
@@ -1,1 +1,45 @@
+# stemdlConfig_GPU_^.yaml
+
+# SciML-Bench
+# Copyright © 2021 Scientific Machine Learning Research Group
+# Scientific Computing Department, Rutherford Appleton Laboratory
+# Science and Technology Facilities Council, UK.
+# All rights reserved.
+
+# This is a configuration file for the Summit test.
+
+# Training dir
+train_dir: /gpfs/alpine/gen150/proj-shared/jpdata/datasets/stemdl_data/training
+
+# Test dir
+test_dir: /gpfs/alpine/gen150/proj-shared/jpdata/datasets/stemdl_data/testing
+
+# Validation dir
+val_dir: /gpfs/alpine/gen150/proj-shared/jpdata/datasets/stemdl_data/validation
+
+# Inference dir
+inference_dir: /gpfs/alpine/gen150/proj-shared/jpdata/datasets/stemdl_data/inference
+
+# Log file fort recording runtimes
+log_file: ./stemdlLog
+
+#? Model file
+model_file : /gpfs/alpine/gen150/proj-shared/jpdata/datasets/stemdl_data/stemdlModel.h5
+
+# Hyperparameters
+seed: 1234
+
+learning_rate: 0.001
+
+epochs: 10
+
+batchsize: 32
+
+train_split: 0.8
+
+resnet: resnet18
+
+nodes: 1
+
+gpu: 6
 
